--- a/CervicalScreeningTelephone.Rmd
+++ b/CervicalScreeningTelephone.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Cervical Screening 2019"
-author: "Buddini Ekanayakere & David Fong"
+author: "Dr. Buddini Ekanayake & Dr. David Fong"
 date: "16th March 2019"
 output: html_document
 ---
@@ -66,15 +66,17 @@ Additional revenue if Cervical Outcome Payment achieved
 ```{r message = FALSE, results = 'hide', warning = FALSE}
 library(tidyverse)
 library(dagitty)
-library(caret)
 library(lubridate)
+library(openxlsx)
 ```
 
 
 ## Theory of Change graph
 
 ```{r}
-dag <- downloadGraph("dagitty.net/mannE14") # data for directed acyclic graph model of intervention
+dag <- downloadGraph("dagitty.net/mannE14")
+# data for directed acyclic graph model of intervention
+# graph create with dagitty at www.dagitty.net
 
 ```
 
@@ -415,6 +417,76 @@ Control group 2
 ```{r}
 ggplot(control2, aes(x = Age, fill=Subgroup)) +
   geom_histogram(binwidth = 5, boundary = 24.95)
+```
+
+## Export sub-groups to Excel file for surveyor use.
+
+Re-attach patient names and demographic details to
+sub-groups, and export to Excel file for use by
+surveyors.
+
+```{r eval = FALSE}
+# set {r eval = FALSE when 'knitting' to form a HTML file}
+# as identifying data should not be in a public space!
+
+patient_details <- read.csv("20190301CSTpopulation_details.csv")
+# file with patient details
+
+treatment1_details <- treatment1 %>%
+  select(c("INTERNALID", "AgeGroup5")) %>% 
+  # will store AgeGroup5 groups in separate sheets
+  left_join(patient_details, by = "INTERNALID") %>%
+  select(-c("PENSIONNO", "INTERNALID")) # InternalID is not needed any more!
+
+treatment2_details <- treatment2 %>%
+  select(c("INTERNALID", "AgeGroup5")) %>% 
+  # will store AgeGroup5 groups treatment in separate sheets
+  left_join(patient_details, by = "INTERNALID") %>%
+  select(-c("PENSIONNO", "INTERNALID")) # InternalID is not needed any more!
+
+control1_details <- control1 %>%
+  select(c("INTERNALID", "AgeGroup5")) %>% 
+  # will store AgeGroup5 groups in separate sheets
+  left_join(patient_details, by = "INTERNALID") %>%
+  select(-c("PENSIONNO", "INTERNALID")) # InternalID is not needed any more!
+
+control2_details <- control2 %>%
+  select(c("INTERNALID", "AgeGroup5")) %>% 
+  # will store AgeGroup5 groups in separate sheets
+  left_join(patient_details, by = "INTERNALID") %>%
+  select(-c("PENSIONNO", "INTERNALID")) # InternalID is not needed any more!
+
+wb_treat <- createWorkbook() # create blank workbook
+
+for (i in levels(treatment1_details$AgeGroup5)) {
+  subsection1 <- treatment1_details[treatment1_details$AgeGroup5 == i,]
+  sheetname1 <- paste("Treat Group 1 - ", i)
+  addWorksheet(wb_treat, sheetname1)
+  writeData(wb_treat, sheetname1, subsection1)
+  subsection2 <- treatment2_details[treatment2_details$AgeGroup5 == i,]
+  sheetname2 <- paste("Treat Group 2 - ", i)
+  addWorksheet(wb_treat, sheetname2)
+  writeData(wb_treat, sheetname2, subsection2)
+}
+
+saveWorkbook(wb_treat, file = "20190301CSTTreatmentGroups.xlsx", overwrite = TRUE)
+
+wb_control <- createWorkbook() # create blank workbook
+
+for (i in levels(control1_details$AgeGroup5)) {
+  subsection1 <- control1_details[control1_details$AgeGroup5 == i,]
+  sheetname1 <- paste("Control Group 1 - ", i)
+  addWorksheet(wb_control, sheetname1)
+  writeData(wb_control, sheetname1, subsection1)
+  subsection2 <- control2_details[control2_details$AgeGroup5 == i,]
+  sheetname2 <- paste("Control Group 2 - ", i)
+  addWorksheet(wb_control, sheetname2)
+  writeData(wb_control, sheetname2, subsection2)
+}
+
+saveWorkbook(wb_control, file = "20190301CSTControlGroups.xlsx", overwrite = TRUE)
+
+
 ```
 
 ## SQL code
